--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,10 @@ httpx==0.27.2
 idna==3.9
 importlib_metadata==8.4.0
 jiter==0.5.0
+jsonpatch==1.33
+jsonpointer==3.0.0
+langchain-core==0.3.0
+langchain-openai==0.2.0
 langsmith==0.1.120
 Lazify==0.4.0
 literalai==0.0.607
@@ -48,12 +52,16 @@ python-dotenv==1.0.1
 python-engineio==4.9.1
 python-multipart==0.0.9
 python-socketio==5.11.4
+PyYAML==6.0.2
+regex==2024.9.11
 requests==2.32.3
 setuptools==74.1.2
 simple-websocket==1.0.0
 sniffio==1.3.1
 starlette==0.37.2
 syncer==2.0.3
+tenacity==8.5.0
+tiktoken==0.7.0
 tomli==2.0.1
 tqdm==4.66.5
 typing-inspect==0.9.0
